Add as an Android library
Signed-off-by: Muntashir Al-Islam <muntashirakon@riseup.net>